Data tables, full calendar etc added
Data Table,
Full Calendar,
Design modified and improved,
Holiday,
CAO,
Schedule UI changed,
Staff UI changed,
OverTime slot removed,
Blank page template added,
Form page added

etc

--- a/availability.html
+++ b/availability.html
@@ -34,73 +34,67 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./dashboard-1.php">
+                            <a class="sidebar-link" href="./home.html">
                                 <i class="align-middle" data-feather="home"></i> <span class="align-middle">Home</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./dashboard-2.php">
+                            <a class="sidebar-link" href="./organizations.html">
                                 <i class="align-middle" data-feather="briefcase"></i> <span class="align-middle">Organizations</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./dashboard-3.php">
+                            <a class="sidebar-link" href="./staffs.html">
                                 <i class="align-middle" data-feather="users"></i> <span class="align-middle">Staffs</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./schedules.php">
+                            <a class="sidebar-link" href="./schedules.html">
                                 <i class="align-middle" data-feather="calendar"></i> <span class="align-middle">Schedules</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item active">
-                            <a class="sidebar-link" href="./availability.php">
+                            <a class="sidebar-link" href="./availability.html">
                                 <i class="align-middle" data-feather="user-check"></i> <span class="align-middle">Availability</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="#!">
+                            <a class="sidebar-link" href="./swap-requests.html">
                                 <i class="align-middle" data-feather="refresh-ccw"></i> <span class="align-middle">Swap Requests</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="#!">
+                            <a class="sidebar-link" href="./leave-requests.html">
                                 <i class="align-middle" data-feather="user-x"></i> <span class="align-middle">Leave Requests</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="#!">
-                                <i class="align-middle" data-feather="clock"></i> <span class="align-middle">Overtime Slot</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="#!">
+                            <a class="sidebar-link" href="./job-level.html">
                                 <i class="align-middle" data-feather="layers"></i> <span class="align-middle">Job Level</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="#!">
+                            <a class="sidebar-link" href="./job-positions.html">
                                 <i class="align-middle" data-feather="bar-chart"></i> <span class="align-middle">Job Positions</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="#!">
+                            <a class="sidebar-link" href="./holiday.html">
                                 <i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Holiday</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="#!">
+                            <a class="sidebar-link" href="./cao.html">
                                 <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">CAO</span>
                             </a>
                         </li>
