--- a/cao.html
+++ b/cao.html
@@ -6,11 +6,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Job Level: Shift Guide">
+        <meta name="description" content="Shift Guide App">
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
 
-        <title>Job Level: Shift Guide</title>
+        <title>Shift Guide App</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="css/app.css" rel="stylesheet">
@@ -78,7 +78,7 @@
                             </a>
                         </li>
 
-                        <li class="sidebar-item active">
+                        <li class="sidebar-item">
                             <a class="sidebar-link" href="./job-level.html">
                                 <i class="align-middle" data-feather="layers"></i> <span class="align-middle">Job Level</span>
                             </a>
@@ -96,7 +96,7 @@
                             </a>
                         </li>
 
-                        <li class="sidebar-item">
+                        <li class="sidebar-item active">
                             <a class="sidebar-link" href="./cao.html">
                                 <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">CAO</span>
                             </a>
@@ -125,7 +125,7 @@
                     <div id="sgapp-page-header">
                         <header>
                             <h1 class="poppins-medium">
-                                Job Level
+                                CAO
                             </h1>
                         </header>
                         <div>
@@ -241,7 +241,6 @@
                     <div class="container-fluid p-0">
 
                         <!--<h1 class="h3 mb-3"></h1>-->
-
                         <div class="card">
                             <div class="card-body">
 
@@ -255,7 +254,7 @@
 
                             </div>
                         </div>
-
+                        
                         <div class="row">
                             <div class="col-12">
                                 <div class="card">
@@ -265,15 +264,19 @@
                                     </div> -->
                                     <div class="card-body">
 
-                                        <table id="my-table" class="table table-striped table-hover table-bordered">
+                                        <table id="my-table" class="table table-striped table-hover table-responsive-sm">
                                             <thead>
                                                 <tr>
                                                     <th scope="col">
-                                                        <a href="#!" class="text-info">
-                                                            Serial
-                                                        </a>
+                                                        Serial
                                                     </th>
-                                                    <th scope="col">Job Level</th>
+                                                    <th scope="col">Title</th>
+                                                    <th scope="col">Min Duty Time</th>
+                                                    <th scope="col">Hourly Rate</th>
+                                                    <th scope="col">OT Surge Rate</th>
+                                                    <th scope="col">Max Overtime Hour</th>
+                                                    <th scope="col">Max Overtime Day</th>
+                                                    <th scope="col">Total OT Hour</th>
                                                     <th scope="col">Action</th>
                                                 </tr>
                                             </thead>
@@ -282,55 +285,33 @@
                                                     <th scope="row">
                                                         1
                                                     </th>
-
                                                     <td>
-                                                        My Job Level Name
+                                                        Recusandae Sequi qu
                                                     </td>
                                                     <td>
+                                                        55
+                                                    </td>
+                                                    <td>
+                                                        €81.00
+                                                    </td>
+                                                    <td>
+                                                        €99.00
+                                                    </td>
+                                                    <td>
+                                                        89.00
+                                                    </td>
+                                                    <td>
+                                                        8
+                                                    </td>
+                                                    <td>
+                                                        712
+                                                    </td>
+                                                        
+                                                    <td class="text-center">
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="eye"></i>
                                                         </button>
-                                                        <button class="btn btn-lighy">
-                                                            <i class="align-middle" data-feather="edit"></i>
-                                                        </button>
                                                         <button class="btn btn-light">
-                                                            <i class="align-middle" data-feather="x"></i>
-                                                        </button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">
-                                                        2
-                                                    </th>
-
-                                                    <td>
-                                                        My Job Level Name
-                                                    </td>
-                                                    <td>
-                                                        <button class="btn btn-light">
-                                                            <i class="align-middle" data-feather="eye"></i>
-                                                        </button>
-                                                        <button class="btn btn-lighy">
-                                                            <i class="align-middle" data-feather="edit"></i>
-                                                        </button>
-                                                        <button class="btn btn-light">
-                                                            <i class="align-middle" data-feather="x"></i>
-                                                        </button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">
-                                                        3
-                                                    </th>
-
-                                                    <td>
-                                                        My Job Level Name
-                                                    </td>
-                                                    <td>
-                                                        <button class="btn btn-light">
-                                                            <i class="align-middle" data-feather="eye"></i>
-                                                        </button>
-                                                        <button class="btn btn-lighy">
                                                             <i class="align-middle" data-feather="edit"></i>
                                                         </button>
                                                         <button class="btn btn-light">
