--- a/holiday.html
+++ b/holiday.html
@@ -10,7 +10,7 @@
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
 
-        <title>Job Level: Shift Guide</title>
+        <title>Holiday: Shift Guide</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="css/app.css" rel="stylesheet">
@@ -78,7 +78,7 @@
                             </a>
                         </li>
 
-                        <li class="sidebar-item active">
+                        <li class="sidebar-item">
                             <a class="sidebar-link" href="./job-level.html">
                                 <i class="align-middle" data-feather="layers"></i> <span class="align-middle">Job Level</span>
                             </a>
@@ -90,7 +90,7 @@
                             </a>
                         </li>
 
-                        <li class="sidebar-item">
+                        <li class="sidebar-item active">
                             <a class="sidebar-link" href="./holiday.html">
                                 <i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Holiday</span>
                             </a>
@@ -125,7 +125,7 @@
                     <div id="sgapp-page-header">
                         <header>
                             <h1 class="poppins-medium">
-                                Job Level
+                                Holiday
                             </h1>
                         </header>
                         <div>
@@ -242,17 +242,19 @@
 
                         <!--<h1 class="h3 mb-3"></h1>-->
 
-                        <div class="card">
-                            <div class="card-body">
+                        <div>
+                            <div class="card">
+                                <div class="card-body">
 
-                                <div class="row">
-                                    <div class="col-12">
-                                        <button class="btn btn-info">
-                                            <i class="align-middle" data-feather="plus"></i> Add
-                                        </button>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <button class="btn btn-info">
+                                                <i class="align-middle" data-feather="plus"></i> Add
+                                            </button>
+                                        </div>
                                     </div>
-                                </div>
 
+                                </div>
                             </div>
                         </div>
 
@@ -273,7 +275,7 @@
                                                             Serial
                                                         </a>
                                                     </th>
-                                                    <th scope="col">Job Level</th>
+                                                    <th scope="col">Holiday Name</th>
                                                     <th scope="col">Action</th>
                                                 </tr>
                                             </thead>
@@ -284,17 +286,17 @@
                                                     </th>
 
                                                     <td>
-                                                        My Job Level Name
+                                                        Holiday 1
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-light">
-                                                            <i class="align-middle" data-feather="eye"></i>
-                                                        </button>
                                                         <button class="btn btn-lighy">
-                                                            <i class="align-middle" data-feather="edit"></i>
+                                                            <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="x"></i>
+                                                        </button>
+                                                        <button class="btn btn-light">
+                                                            <i class="align-middle" data-feather="eye"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
@@ -304,17 +306,17 @@
                                                     </th>
 
                                                     <td>
-                                                        My Job Level Name
+                                                        Holiday 2
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-light">
-                                                            <i class="align-middle" data-feather="eye"></i>
-                                                        </button>
                                                         <button class="btn btn-lighy">
-                                                            <i class="align-middle" data-feather="edit"></i>
+                                                            <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="x"></i>
+                                                        </button>
+                                                        <button class="btn btn-light">
+                                                            <i class="align-middle" data-feather="eye"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
@@ -324,17 +326,17 @@
                                                     </th>
 
                                                     <td>
-                                                        My Job Level Name
+                                                        Holiday 3
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-light">
-                                                            <i class="align-middle" data-feather="eye"></i>
-                                                        </button>
                                                         <button class="btn btn-lighy">
-                                                            <i class="align-middle" data-feather="edit"></i>
+                                                            <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="x"></i>
+                                                        </button>
+                                                        <button class="btn btn-light">
+                                                            <i class="align-middle" data-feather="eye"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
