Bug fixed, organizations-add.html page added

--- a/forgot-password-code-verify.html
+++ b/forgot-password-code-verify.html
@@ -62,10 +62,10 @@
                                                             </div>
 
                                                             <div class="d-grid gap-2 mt-3">
-                                                                <a href="./forgot-password-confirm.php" class="btn btn-lg btn-info">Verify my account</a>
+                                                                <a href="./forgot-password-confirm.html" class="btn btn-lg btn-info">Verify my account</a>
                                                             </div>
                                                             <div class="text-center mt-3">
-                                                                Already have an account? <a href="./sign-up.php" class="text-info">Sign In</a>
+                                                                Already have an account? <a href="./sign-up.html" class="text-info">Sign In</a>
                                                             </div>
                                                         </form>
                                                     </div>
