--- a/forgot-password-confirm.html
+++ b/forgot-password-confirm.html
@@ -56,10 +56,10 @@
                                                             </div>
 
                                                             <div class="d-grid gap-2 mt-3">
-                                                                <a href="./index.php" class="btn btn-lg btn-info">Confirm</a>
+                                                                <a href="./index.html" class="btn btn-lg btn-info">Confirm</a>
                                                             </div>
                                                             <div class="text-center mt-3">
-                                                                Don't have any account yet? <a href="./index.php" class="text-info">Sign Up</a>
+                                                                Don't have any account yet? <a href="./index.html" class="text-info">Sign Up</a>
                                                             </div>
                                                         </form>
                                                     </div>
