--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
                                                                 </div>
 
                                                                 <div class="col-sm-12 col-md-6 text-end sgapp-center">
-                                                                    <a href="./forgot-password.php" class="btn btn-link text-info">Forgot password?</a>
+                                                                    <a href="./forgot-password.html" class="btn btn-link text-info">Forgot password?</a>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="d-grid gap-2 mt-3">
-                                                            <a href="./dashboard-1.php" class="btn btn-lg btn-info">Sign in</a>
+                                                            <a href="./home.html" class="btn btn-lg btn-info">Sign in</a>
                                                         </div>
                                                         <div class="text-center mt-3">
-                                                            Don't have account yet? <a href="./sign-up.php" class="text-info">Sign Up</a>
+                                                            Don't have account yet? <a href="./sign-up.html" class="text-info">Sign Up</a>
                                                         </div>
                                                     </form>
                                                 </section>
