--- a/forgot-password.html
+++ b/forgot-password.html
@@ -51,10 +51,10 @@
                                                             </div>
 
                                                             <div class="d-grid gap-2 mt-3">
-                                                                <a href="./forgot-password-code-verify.php" class="btn btn-lg btn-info">Forgot Password</a>
+                                                                <a href="./forgot-password-code-verify.html" class="btn btn-lg btn-info">Forgot Password</a>
                                                             </div>
                                                             <div class="text-center mt-3">
-                                                                Already have an account? <a href="./index.php" class="text-info">Sign In</a>
+                                                                Already have an account? <a href="./index.html" class="text-info">Sign In</a>
                                                             </div>
                                                         </form>
                                                     </div>
