--- a/sign-up.html
+++ b/sign-up.html
@@ -81,7 +81,7 @@
                                                                 </div>
 
                                                                 <div class="col-sm-12 col-md-6 text-end sgapp-center">
-                                                                    <a href="./forgot-password.php" class="btn btn-link text-info">Forgot password?</a>
+                                                                    <a href="./forgot-password.html" class="btn btn-link text-info">Forgot password?</a>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -89,7 +89,7 @@
                                                             <a href="#!" class="btn btn-lg btn-info">Sign Up</a>
                                                         </div>
                                                         <div class="text-center mt-3">
-                                                            Already have an account? <a href="./index.php" class="text-info">Sign In</a>
+                                                            Already have an account? <a href="./index.html" class="text-info">Sign In</a>
                                                         </div>
                                                     </form>
                                                 </section>
