--- a/organizations-add.html
+++ b/organizations-add.html
@@ -15,6 +15,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="css/app.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" />
         <link href="./css/dashboard.css" rel="stylesheet" />
     </head>
 
@@ -260,7 +262,11 @@
                                                 <div class="col-sm-12 col-md-6 col-lg-3">
                                                     <div class="mb-3">
                                                         <label for="positionSelect" class="form-label">Available Position</label>
-                                                        <input type="text" class="form-control" id="positionSelect">
+                                                        
+                                                        <select id="positionSelect" class="single2Selects form-select" name="state" style="width: 100%;">
+                                                            <option value="AL">Alabama</option>
+                                                            <option value="WY">Wyoming</option>
+                                                        </select>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-12 col-md-6 col-lg-3">    
@@ -410,6 +416,17 @@
         </div>
 
         <script src="js/app.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+        
+        <script type="text/javascript">
+            // In your Javascript (external .js resource or <script> tag)
+            $(document).ready(function() {
+                $('.single2Selects').select2({
+                    theme: 'bootstrap-5'
+                });
+            });
+        </script>
 
     </body>
 
