--- a/organizations-add.html
+++ b/organizations-add.html
@@ -420,7 +420,7 @@
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         
         <script type="text/javascript">
-            // In your Javascript (external .js resource or <script> tag)
+            // Select2
             $(document).ready(function() {
                 $('.sgapp-select2').select2({
                     theme: 'bootstrap-5'
