--- a/cao.html
+++ b/cao.html
@@ -108,7 +108,7 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./index.php">
+                            <a class="sidebar-link" href="./index.html">
                                 <i class="align-middle" data-feather="log-out"></i> <span class="align-middle">Logout</span>
                             </a>
                         </li>
@@ -230,7 +230,7 @@
                                     <a class="dropdown-item" href="index.html"><i class="align-middle me-1" data-feather="settings"></i> Settings & Privacy</a>
                                     <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="help-circle"></i> Help Center</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="./index.php">Log out</a>
+                                    <a class="dropdown-item" href="./index.html">Log out</a>
                                 </div>
                             </li>
                         </ul>
