--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <title>Shift Guide App</title>
 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="css/app.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
         <link href="./css/dashboard.css" rel="stylesheet">
@@ -82,7 +83,10 @@
                                                             </div>
                                                         </div>
                                                         <div class="d-grid gap-2 mt-3">
-                                                            <a href="./home.html" class="btn btn-lg btn-info">Sign in</a>
+                                                            <a href="./home.html" class="btn btn-lg btn-info">
+                                                                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                                                Sign in
+                                                            </a>
                                                         </div>
                                                         <div class="text-center mt-3">
                                                             Don't have account yet? <a href="./sign-up.html" class="text-info">Sign Up</a>
