organization details added

--- a/swap-requests.html
+++ b/swap-requests.html
@@ -895,7 +895,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
