--- a/cao.html
+++ b/cao.html
@@ -246,7 +246,7 @@
 
                                 <div class="row">
                                     <div class="col-12">
-                                        <a class="btn btn-info" href="./cao-edit.html">
+                                        <a class="btn btn-info" href="./cao-add.html">
                                             <i class="align-middle" data-feather="plus"></i> Add
                                         </a>
                                     </div>
@@ -308,15 +308,15 @@
                                                     </td>
                                                         
                                                     <td class="text-center">
-                                                        <a class="btn btn-light" href="./cao-edit.html">
-                                                            <i class="align-middle" data-feather="eye"></i>
+                                                        <a class="btn btn-light" href="./cao-details.html">
+                                                            <i class="align-middle text-primary" data-feather="eye"></i>
                                                         </a>
                                                         <a class="btn btn-light" href="./cao-edit.html">
-                                                            <i class="align-middle" data-feather="edit"></i>
+                                                            <i class="align-middle text-success" data-feather="edit"></i>
                                                         </a>
-                                                        <a class="btn btn-light" href="./cao-edit.html">
-                                                            <i class="align-middle" data-feather="x"></i>
-                                                        </a>
+                                                        <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                                                            <i class="align-middle text-danger" data-feather="x"></i>
+                                                        </button>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -329,6 +329,27 @@
 
                     </div>
                 </main>
+                
+                <!-- Delete Modal -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteModalLabel">Delete</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>
+                                    Are you sure that you want to delete this item?
+                                </p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                                <button type="button" class="btn btn-danger">Remove</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <footer class="footer">
                     <div class="container-fluid">
