--- a/holiday.html
+++ b/holiday.html
@@ -289,7 +289,7 @@
                                                         Holiday 1
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -309,7 +309,7 @@
                                                         Holiday 2
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -329,7 +329,7 @@
                                                         Holiday 3
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
