--- a/job-level.html
+++ b/job-level.html
@@ -290,7 +290,7 @@
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="eye"></i>
                                                         </button>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="edit"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -310,7 +310,7 @@
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="eye"></i>
                                                         </button>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="edit"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -330,7 +330,7 @@
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="eye"></i>
                                                         </button>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="edit"></i>
                                                         </button>
                                                         <button class="btn btn-light">
