--- a/job-positions.html
+++ b/job-positions.html
@@ -294,7 +294,7 @@
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="eye"></i>
                                                         </button>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="edit"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -317,7 +317,7 @@
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="eye"></i>
                                                         </button>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="edit"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -340,7 +340,7 @@
                                                         <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="eye"></i>
                                                         </button>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="edit"></i>
                                                         </button>
                                                         <button class="btn btn-light">
