--- a/swap-requests.html
+++ b/swap-requests.html
@@ -319,7 +319,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -383,7 +383,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -447,7 +447,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -511,7 +511,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -575,7 +575,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -639,7 +639,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -703,7 +703,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -767,7 +767,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -831,7 +831,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
