--- a/leave-requests.html
+++ b/leave-requests.html
@@ -308,7 +308,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -362,7 +362,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -416,7 +416,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -470,7 +470,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -524,7 +524,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -578,7 +578,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -632,7 +632,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -686,7 +686,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -740,7 +740,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
@@ -794,7 +794,7 @@
                                                             Neque porro quisquam est qui dolorem ipsum...
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-lighy">
+                                                        <button class="btn btn-light">
                                                             <i class="align-middle" data-feather="check"></i>
                                                         </button>
                                                         <button class="btn btn-light">
