--- a/home.html
+++ b/home.html
@@ -53,6 +53,12 @@
                                 <i class="align-middle" data-feather="users"></i> <span class="align-middle">Staffs</span>
                             </a>
                         </li>
+                        
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="./attendance.html">
+                                <i class="align-middle" data-feather="check-circle"></i> <span class="align-middle">Attendance</span>
+                            </a>
+                        </li>
 
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="./schedules.html">
@@ -239,113 +245,6 @@
 
                 <main id="sgapp-main" class="content">
                     <div class="container-fluid p-0">
-
-                        <!--<h1 class="h3 mb-3"></h1>-->
-<!--
-                        <div>
-                            <div id="sgapp-calendar-toolbar-large" class="card">
-                                <div class="card-body">
-
-                                    <div class="row">
-                                        <div class="col-sm-12 col-md-2 col-xl-4">
-
-                                            <div class="btn-group dropdown">
-                                                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                                    February, 2024
-                                                </button>
-                                                <ul class="dropdown-menu mt-5">
-                                                    <li><a class="dropdown-item" href="#">January, 2024</a></li>
-                                                    <li><a class="dropdown-item" href="#">February, 2024</a></li>
-                                                    <li><a class="dropdown-item" href="#">March, 2024</a></li>
-                                                </ul>
-                                            </div>
-
-                                        </div>
-                                        <div class="col-sm-12 col-md-5 col-xl-4 text-center">
-
-                                            <button class="btn btn-light">Day</button>
-                                            <button class="btn btn-light">Week</button>
-                                            <button class="btn btn-info">Month</button>
-                                            <button class="btn btn-light">Year</button>
-
-                                        </div>
-                                        <div class="col-sm-12 col-md-5 col-xl-4 text-end">
-
-                                            <button class="btn btn-light">
-                                                <i class="align-middle" data-feather="chevron-left"></i>
-                                            </button>
-
-                                            <button class="btn btn-light">
-                                                Today
-                                            </button>
-
-                                            <button class="btn btn-light">
-                                                <i class="align-middle" data-feather="chevron-right"></i>
-                                            </button>
-
-                                            <button id="add-event-button" class="btn btn-info mx-2">
-                                                <i class="align-middle" data-feather="plus"></i>
-                                                Add
-                                            </button>
-
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-
-                        <div>
-                            <div id="sgapp-calendar-toolbar-small" class="card">
-                                <div class="card-body">
-
-                                    <div class="row">
-                                        <div class="col-sm-12 col-md-4 text-center">
-
-                                            <div class="btn-group">
-                                                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                                    February, 2024
-                                                </button>
-                                                <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="#">January, 2024</a></li>
-                                                    <li><a class="dropdown-item" href="#">February, 2024</a></li>
-                                                    <li><a class="dropdown-item" href="#">March, 2024</a></li>
-                                                </ul>
-                                            </div>
-
-                                        </div>
-                                        <div class="col-sm-12 col-md-4 text-center">
-
-                                            <div class="btn-group">
-                                                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                                    Month
-                                                </button>
-                                                <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="#">Day</a></li>
-                                                    <li><a class="dropdown-item" href="#">Week</a></li>
-                                                    <li><a class="dropdown-item" href="#">Month</a></li>
-                                                    <li><a class="dropdown-item" href="#">Year</a></li>
-                                                </ul>
-                                            </div>
-
-                                        </div>
-                                        <div class="col-sm-12 col-md-4 text-center">
-
-                                            <button class="btn btn-light">
-                                                Today
-                                            </button>
-
-                                            <button class="btn btn-info mx-2">
-                                                <i class="align-middle" data-feather="plus"></i>
-                                                Add
-                                            </button>
-
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div> -->
 
                         <div class="row">
                             <div class="col-12 col-md-4">
