--- a/forms.html
+++ b/forms.html
@@ -50,6 +50,12 @@
                                 <i class="align-middle" data-feather="users"></i> <span class="align-middle">Staffs</span>
                             </a>
                         </li>
+                        
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="./attendance.html">
+                                <i class="align-middle" data-feather="check-circle"></i> <span class="align-middle">Attendance</span>
+                            </a>
+                        </li>
 
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="./schedules.html">
