Changes had made according to suggestion

--- a/organizations.html
+++ b/organizations.html
@@ -404,7 +404,7 @@
                 
                 <!-- View Modal -->
                 <div class="modal fade" id="viewModal" tabindex="-1" aria-labelledby="viewModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+                    <div class="modal-dialog modal-dialog-scrollable">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="viewModalLabel">Organization Detail Information</h5>
