Terms & conditions page added

--- a/404.html
+++ b/404.html
@@ -77,7 +77,7 @@
                                 <nav class="mb-3">
                                     <ul class="nav justify-content-center">
                                         <li class="nav-item">
-                                            <a class="nav-link text-secondary" href="#">Terms & Conditions</a>
+                                            <a class="nav-link text-secondary" href="./toc.html">Terms & Conditions</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link text-secondary" href="#">Privacy Policy</a>
