--- a/home.html
+++ b/home.html
@@ -251,16 +251,6 @@
                                 
                                 <div id='calendar'></div>
                                 
-<!--                                <div class="card">
-                                    <div class="card-header">
-                                        <h5 class="card-title mb-0"></h5>
-                                    </div>-
-                                    <div class="card-body">
-
-                                        <div id='calendar'></div>
-
-                                    </div>
-                                </div>-->
                             </div>
                         </div>
 
@@ -278,7 +268,7 @@
                             <div class="col-8 text-end">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <a class="text-muted" href="#!" target="_blank">Terms & Condition</a>
+                                        <a class="text-muted" href="./toc.html" target="_blank">Terms & Condition</a>
                                     </li>
                                     <li class="list-inline-item">
                                         <a class="text-muted" href="#!" target="_blank">Privacy</a>
