--- a/staffs.html
+++ b/staffs.html
@@ -588,7 +588,7 @@
                             <div class="col-8 text-end">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <a class="text-muted" href="#!" target="_blank">Terms & Condition</a>
+                                        <a class="text-muted" href="./toc.html" target="_blank">Terms & Condition</a>
                                     </li>
                                     <li class="list-inline-item">
                                         <a class="text-muted" href="#!" target="_blank">Privacy</a>
